--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,11 +10,11 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<a href="/">Inicio</a>
-		<a href="/about/">Sobre mi</a>
-		<a href="/blog/">Blog</a>  
-		<h1>Hola Astro jeje</h1>
-		<h1>Creado por Skarabajo</h1>
-	</body>
+    <body>
+        <a href="/">Inicio</a>
+        <a href="/about/">Sobre mi</a>
+        <a href="/blog/">Blog</a>    
+        <h1>Mi blog de Astro aprendizaje</h1>
+        <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+      </body>
 </html>
