--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "Sobre miiii";
 
@@ -18,6 +20,7 @@ const goal = 3;
 const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
+
 ---
 <html lang="en">
 	<head>
@@ -39,9 +42,7 @@ const textCase = "uppercase";
           </style>
 	</head>
     <body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>    
+		<Navigation /> 
         <h1>{pageTitle}</h1>
         <p>He aquí algunos datos sobre mí:</p>
         <ul>
@@ -61,5 +62,6 @@ const textCase = "uppercase";
         {finished && <p>¡He terminado este tutorial!</p>}
 
         {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
-      </body>
+        <Footer/>    
+    </body>
 </html>
