--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "Blog";
 ---
@@ -20,9 +21,7 @@ const pageTitle = "Blog";
             <title>Astro</title>
           </head>
           <body>
-            <a href="/">Inicio</a>
-            <a href="/about/">Sobre mi</a>
-            <a href="/blog/">Blog</a>
+            <Navigation/>
             <h1>{pageTitle}</h1>
             <h1>Mi blog de aprendizaje sobre Astro</h1>
             <p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
