--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Página de inicio";
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <h2>Mi impresionante subtítulo del blog</h2>
+  <h2>Hola jioni</h2>
 </BaseLayout>
