--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,9 @@ import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
 
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "Blog";
 ---
 
@@ -11,10 +13,11 @@ const pageTitle = "Blog";
   <BaseLayout pageTitle={pageTitle}>
     <h1>Mi blog de aprendizaje sobre Astro</h1>
       <p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
-        <ul>
-          <li><a href="/posts/post-1/">Publicación 1</a></li>
+        <ul>      
+     <!-- <li><a href="/posts/post-1/">Publicación 1</a></li>
           <li><a href="/posts/post-2/">Publicación 2</a></li>
-          <li><a href="/posts/post-3/">Publicación 3</a></li>
+          <li><a href="/posts/post-3/">Publicación 3</a></li>   -->
+          {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
         </ul>
   </BaseLayout>
 
