--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,9 @@
 ---
+import "../styles/tailwind.css";
 ---
-<div class="nav-links">
-    <a href="/">Inicio</a>
-    <a href="/about/">Sobre mi</a>
-    <a href="/blog/">Blog</a>
-    <a href="/tags/">Etiquetas</a>
+<div class="nav-links flex space-x-4 p-4 bg-gray-800 text-white">
+    <a href="/" class="hover:text-gray-400">Inicio</a>
+    <a href="/about/" class="hover:text-gray-400">Sobre mi</a>
+    <a href="/blog/" class="hover:text-gray-400">Blog</a>
+    <a href="/tags/" class="hover:text-gray-400">Etiquetas</a>
 </div>
