--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,11 @@ html {
     background-color: #f1f5f9;
     font-family: sans-serif;
   }
-  
+  html, body {
+
+    margin: 0;
+  }
+
   body {
     margin: 0 auto;
     width: 100%;
