--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -14,7 +14,7 @@ const pageTitle = "Índice de etiquetas";
 
   <style>
     a {
-      color: #00539F;
+      color: antiquewhite;
     }
   
     .tags {
@@ -28,6 +28,6 @@ const pageTitle = "Índice de etiquetas";
       border-radius: .5em;
       padding: .5em 1em;
       font-size: 1.15em;
-      background-color: #F8FCFD;
+      background-color: #1f2937;
     }
   </style>
