--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #0D1117;
+}
+li{
+    color: green;
+}
+
+h1 h2 h3 h4 h5 h6 {
+    color: honeydew;
+}
