--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -25,12 +25,10 @@ const { frontmatter } = Astro.props;
 
   p {
   color: #00539F;
-  transition: color 0.3s ease, background-color 0.3s ease; /* Transiciones suaves */
-}
-
-p:hover {
-  color: #ff5733; /* Cambiar color al pasar el ratón */
-  background-color: #e0f7fa; /* Cambiar fondo al pasar el ratón */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Sombra de texto sutil */
+  background-color: #f0f8ff; /* Fondo claro */
+  padding: 10px; /* Espaciado interno */
+  border-radius: 5px; /* Bordes redondeados */
 }
 
 
