--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -14,7 +14,7 @@ const pageTitle = "Índice de etiquetas";
 
   <style>
     a {
-      color: antiquewhite;
+      color: aliceblue;
     }
   
     .tags {
