--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,9 +6,20 @@ body{
     background-color: #0D1117;
 }
 li{
-    color: green;
+    color: aliceblue    ;
 }
-
+p {
+    color: aliceblue;
+}
 h1 h2 h3 h4 h5 h6 {
     color: aliceblue;
+}
+/* En tu archivo CSS */
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Asegúrate de que las partículas estén detrás del contenido */
 }
