--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,13 +13,14 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
+  <body>
+    
     <Header />
     <h1>{pageTitle}</h1>
     <slot />
     <Footer />
     <script>
       import "../scripts/menu.js";
-
     </script>
-  </body>
+    </body>
 </html>
