--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -22,16 +22,17 @@ const { frontmatter } = Astro.props;
   a {
     color: #00539F;
   }
-
   p {
-  color: #00539F;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Sombra de texto sutil */
-  background-color: #f0f8ff; /* Fondo claro */
-  padding: 10px; /* Espaciado interno */
-  border-radius: 5px; /* Bordes redondeados */
-}
-
-
+     margin: 0.25em 0;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+     padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #1f2937;
+    color: aliceblue;
+    display: inline-block; /* Permite que el párrafo se ajuste al texto */
+    max-width: 100%; /* Asegura que no se desborde del contenedor */
+        }
 
   .tags {
     display: flex;
@@ -45,6 +46,5 @@ const { frontmatter } = Astro.props;
     padding: .5em 1em;
     font-size: 1.15em;
     background-color: #F8FCFD;
-
   }
 </style>
