--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@ import "../styles/tailwind.css";
 <div class="nav-links flex flex-wrap items-center justify-between p-4 bg-gray-800 text-white">
     <div class="flex space-x-4">
         <a href="/" class="hover:text-gray-400">Inicio</a>
-        <a href="/about/" class="hover:text-gray-400">Sobre mi</a>
+        <a href="/about/" class="hover:text-blue-500">Sobre mi</a>
         <a href="/blog/" class="hover:text-gray-400">Blog</a>
         <a href="/tags/" class="hover:text-gray-400">Etiquetas</a>
     </div>
